Document that Enumerable#sum may not respect redefinition of Range#each

It already documented that it may not respect redefinition
of Integer#+.

Fixes [Bug #13700]